Fix form bug, remove some code.

--- a/vision/Part2_start.ipynb
+++ b/vision/Part2_start.ipynb
@@ -583,7 +583,7 @@
       "source": [
         "# define full architecture: input convs, resnet blocks, output classifier\n",
         "def resnet_v2(inputs, blocks, is_training=True,\n",
-        "              get_intermediate_activations=False, num_classes=1000,\n",
+        "              num_classes=1000,\n",
         "              use_global_pool=True, name=\"resnet_v2\"):\n",
         "  \"\"\"ResNet V2.\"\"\"\n",
         "  blocks = tuple(blocks)\n",
@@ -622,7 +622,7 @@
         "    inputs = tf.squeeze(inputs, axis=[1, 2])\n",
         "    outputs += [inputs]\n",
         "\n",
-        "  return outputs if get_intermediate_activations else outputs[-1]"
+        "  return outputs[-1]"
       ],
       "execution_count": 0,
       "outputs": []
