Add comment to VAE.

--- a/unsupervised/[Exercises]_2_VAE.ipynb
+++ b/unsupervised/[Exercises]_2_VAE.ipynb
@@ -550,7 +550,7 @@
       "source": [
         "def bound_terms(data_batch, variational_posterior, decoder_fn):\n",
         "  latent_sample = None\n",
-        "  # Compute the log probs of the data (log p(x|z)). \n",
+        "  # Compute the log probs of the data (log p^*_{\\theta}(x|z)). \n",
         "  # Hint: Use the decoder and look at the shape assertion below!\n",
         "  all_log_probs = None\n",
         "\n",
