Clarify the variables to be used in a function.

--- a/unsupervised/[Exercises]_1_bayesian_logistic_regression.ipynb
+++ b/unsupervised/[Exercises]_1_bayesian_logistic_regression.ipynb
@@ -253,34 +253,13 @@
       "metadata": {
         "id": "KgQ8-mnH4pTT",
         "colab_type": "code",
-        "outputId": "903a61cc-5fcd-41f6-de0f-0aa7c00b2c0b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 185
-        }
+        "colab": {}
       },
       "source": [
         "features, targets, feature_names = get_data()"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "['malignant' 'benign']\n",
-            "['mean radius' 'mean texture' 'mean perimeter' 'mean area'\n",
-            " 'mean smoothness' 'mean compactness' 'mean concavity'\n",
-            " 'mean concave points' 'mean symmetry' 'mean fractal dimension'\n",
-            " 'radius error' 'texture error' 'perimeter error' 'area error'\n",
-            " 'smoothness error' 'compactness error' 'concavity error'\n",
-            " 'concave points error' 'symmetry error' 'fractal dimension error'\n",
-            " 'worst radius' 'worst texture' 'worst perimeter' 'worst area'\n",
-            " 'worst smoothness' 'worst compactness' 'worst concavity'\n",
-            " 'worst concave points' 'worst symmetry' 'worst fractal dimension']\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -301,60 +280,26 @@
       "metadata": {
         "id": "_9iwLLowE4z8",
         "colab_type": "code",
-        "outputId": "74754b07-71f0-4ce4-eda2-300bc5719410",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "np.mean(targets)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.6274165"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "aA8nn2zy64F3",
         "colab_type": "code",
-        "outputId": "c199ba51-2ce0-4d75-994c-ea1ed5aa1dd3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "features.shape"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(569, 31)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -400,39 +345,14 @@
       "metadata": {
         "id": "Lt9jDrhC4vYY",
         "colab_type": "code",
-        "outputId": "0c0fe6b9-1e86-4416-f1c0-a3775e4b9e69",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 87
-        }
+        "colab": {}
       },
       "source": [
         "lr.fit(features, targets)\n",
         "lr.score(features, targets)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python2.7/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.9876977152899824"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -648,7 +568,7 @@
         "colab": {}
       },
       "source": [
-        "def run_model(posterior, num_samples):\n",
+        "def run_model(features, targets, prior, posterior, num_samples):\n",
         "  # Sample from the posterior to obtain a set of parameters used for\n",
         "  # prediction. Use `num_samples` for the number of samples. \n",
         "  posterior_samples = None\n",
@@ -681,7 +601,7 @@
       },
       "source": [
         "param_log_probs, kl, posterior_samples, logits = run_model(\n",
-        "      posterior, NUM_POSTERIOR_SAMPLES)\n",
+        "      features, targets, prior, posterior, NUM_POSTERIOR_SAMPLES)\n",
         "predictions = _predictions(logits)\n",
         "accuracy = _accuracy(targets=targets, predictions=predictions)\n",
         "accuracy = tf.reduce_mean(accuracy)\n"
